# jetbrains-toolbox-updater

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml  release.yml  release_assets.yml  release_checking.yml  rust.yml
old/: jbtb_updater.py
src/: lib.rs  main.rs
