[package]
name = "jetbrains-toolbox-updater"
version = "5.4.6"
edition = "2021"
authors = ["GideonBear"]
description = "Application and library that updates JetBrains Toolbox IDE's on demand using some trickery"
readme = "README.md"
repository = "https://github.com/GideonBear/jetbrains-toolbox-updater"
license = "GPL-3.0-only"
keywords = ["jetbrains", "toolbox", "update"]
categories = ["command-line-utilities"]

[dependencies]
#clap = { version = "4.5.37", features = ["derive"], optional = true }
dirs = "6.0.0"
serde_json = "1.0.142"
sysinfo = "0.36.1"
log = "0.4.27"

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = { version = "0.8.0", default-features = false }

#[features]
#cli = ["clap"]

#[[bin]]
#name = "jetbrains-toolbox-updater"
#required-features = ["cli"]
